--- a/footer.html
+++ b/footer.html
@@ -40,9 +40,9 @@
                 <div id="webFooter">
                     <h3> address </h3>
                     <p> building 101 </p>
-                    <p> central avenue </p>
-                    <p> la - 902722 </p>
-                    <p> united states </p>
+                    <p> Kairaba avenue </p>
+                    <p> Kanifing </p>
+                    <p> The Gambia </p>
                 </div>
             </div>
             <div id="credit"> © Ecostore  &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp Made with ❤ by Modou</div>
